Fix minor layout issues

--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -11,5 +11,4 @@
   height: auto;  
   position: absolute;
   right: 18%;
-  bottom: 6%;
 }
